[tool.poetry]
name = "option-bot"
version = "0.1.0"
description = ""
authors = ["Jody Hirschi <jhirschibar@gmail.com>"]
readme = "README.md"
packages = [{include = "option_bot", from = "."}, 
            {include = "data_pipeline", from = "./option_bot"},
            {include = "db_tools", from = "./option_bot/"},
            {include = "rl_agent", from = "./option_bot"},
            {include = "trader", from = "./option_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
polygon-api-client = "^1.6.2"
pydantic = "^1.10.4"
types-requests = "^2.28.11.8"
pandas = "^1.5.3"
sqlalchemy = "^2.0.0"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}
aiohttp = "^3.8.4"
pyrh = "^2.1.2"
sentry-sdk = "^1.16.0"
uvloop = "^0.17.0"
aiomultiprocess = {path = "../aiomultiprocess", develop = true}
poethepoet = "^0.21.1"
numba = "^0.57.1"
py-vollib-vectorized = "^0.1.1"


[tool.poetry.group.torchman.dependencies]
filelock = "^3.3.0"
jinja2 = "^3.1.2"
markupsafe = "^2.0.1"
networkx = "^3.1"
sympy = "^1.12"
mpmath = "^1.3"
typing-extensions = "^4.0.1"
cmake = "^3.26.4"
lit = "^16.0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
ipython = "^8.14.0"

[tool.poe.tasks]
install-torch = "pip install torch --index-url https://download.pytorch.org/whl/cu118"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
